--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.1.5",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@shadcn/ui": "^0.0.4",
     "autoprefixer": "^10.4.19",
     "class-variance-authority": "^0.7.0",
